# iNotePal

./: 1_merged_dataset_BERT.ipynb  404.html  README.md  index.html  robots.txt  sitemap-0.xml  sitemap.xml  감성대화말뭉치.ipynb  단발성대화데이터셋.ipynb
.github/: auto_assign.yml
.github/workflows/: auto-assign-pr.yml  auto-assign.yml
404/: index.html
analysis/: index.html
app/: .env.template  .gitignore  .tool-versions  pyproject.toml  requirements.txt  requirements_ubuntu.txt  rxconfig.py  tailwind.config.js
app/app/: __init__.py  app.py  app_state.py  base_state.py  chat_state.py  login.py  registration.py  routes.py  ryugibo.py  state.py  style.py  (+1 more)
calendar/: index.html
dataset/: 5_공감형대화_데이터셋.ipynb  감성대화말뭉치.ipynb  단발성대화데이터셋.ipynb  웰니스_대화_스크립트_데이터셋.ipynb  페르소나_데이터_불러오기.ipynb
figma/: Pal-ette.fig
login/: index.html
models/: 1_empathy_only_BERT.ipynb  1_merged_dataset_BERT.ipynb  LLaMa_Alpaca_LoRA_파인튜닝.ipynb  conv-7_KoBERT.ipynb  faiss-index-cache.ipynb  kogpt_chatbot(v1).ipynb  merged_dataset_10k_KoBERT.ipynb  roberta_large_5k_samples_7_emotions.ipynb  ryugibo_simple_model.ipynb  감성대화_BERT.ipynb  감성대화_KoBERT.ipynb  심리_chatbot.ipynb
oauth/: index.html
protected/: index.html
register/: index.html
reset-password/: index.html
scripts/: integrated_deploy.ipynb  model_deploy.ipynb  reflex_deploy.ipynb
streamlit/: .gitignore  Home.py  base_model.py  firebase_auth.py  pyproject.toml  requirements.txt  supabase_client.py
streamlit/.streamlit/: secrets.toml.template
streamlit/models/: ryugibo.py
streamlit/pages/: VectorText.py
word_cloud/: index.html
(+368 files in other folders)
